--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>markdownj-core</artifactId>
-			<version>0.4.1</version>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.2.0</version>
 		</dependency>
 		
 		<dependency>
