--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,17 @@
             <artifactId>pegdown</artifactId>
             <version>1.2.0</version>
 		</dependency>
-		
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>2.0</version>
+        </dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+    </dependencies>
 </project>
